{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 108,
  "lineage": "e0ca2515-5525-b5b8-c5ac-15cc937e9388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0d3776ef525d5dd",
            "arn": "arn:aws:ec2:eu-central-1:028023886500:instance/i-0949c346c18c7ffc0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0949c346c18c7ffc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "curso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08646858895e59bcc",
            "private_dns": "ip-10-2-0-250.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.250",
            "public_ip": "3.67.220.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd5c9fab59ca4db0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f661e73a1b29c781",
            "tags_all": {
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b13c571e187d7aa1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_francoforte_cidr",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_francoforte",
            "data.aws_key_pair.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:internet-gateway/igw-0a2253a0cf0694aa7",
            "id": "igw-0a2253a0cf0694aa7",
            "owner_id": "028023886500",
            "tags": {
              "Name": "ITGW vpc Francoforte"
            },
            "tags_all": {
              "Name": "ITGW vpc Francoforte",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "vpc_id": "vpc-08acd2e16b4fad3cb"
          },
          "dependencies": [
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "francoforte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:route-table/rtb-0ee80d4543592fc19",
            "id": "rtb-0ee80d4543592fc19",
            "owner_id": "028023886500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2253a0cf0694aa7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "francoforte"
            },
            "tags_all": {
              "Name": "francoforte",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-08acd2e16b4fad3cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01640e0f0f883d8cd",
            "route_table_id": "rtb-0ee80d4543592fc19",
            "subnet_id": "subnet-0f661e73a1b29c781"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.francoforte",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_francoforte_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:security-group/sg-0b13c571e187d7aa1",
            "description": "Allow TLS inbound traffic and egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b13c571e187d7aa1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "francoforte-tls",
            "name_prefix": "",
            "owner_id": "028023886500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "francoforte-tls"
            },
            "tags_all": {
              "Name": "francoforte-tls",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-08acd2e16b4fad3cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:subnet/subnet-0c6e467b0064c62dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e467b0064c62dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "028023886500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "vpc_id": "vpc-08acd2e16b4fad3cb"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:subnet/subnet-0f661e73a1b29c781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f661e73a1b29c781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "028023886500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet "
            },
            "tags_all": {
              "Name": "Public Subnet ",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            },
            "vpc_id": "vpc-08acd2e16b4fad3cb"
          },
          "dependencies": [
            "aws_vpc.vpc_francoforte"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_francoforte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:028023886500:vpc/vpc-08acd2e16b4fad3cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0883aaa04ec7b17ca",
            "default_route_table_id": "rtb-0177f02741ebd6135",
            "default_security_group_id": "sg-04120eea970ef0cdd",
            "dhcp_options_id": "dopt-6216f008",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08acd2e16b4fad3cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0177f02741ebd6135",
            "owner_id": "028023886500",
            "tags": {
              "Name": "VPC-Francoforte"
            },
            "tags_all": {
              "Name": "VPC-Francoforte",
              "Owner": "Alexis",
              "Project": "Test-Project",
              "env": "develop",
              "name": "Francoforte VPC"
            }
          }
        }
      ]
    }
  ]
}